--- a/test/fixtures/planned_trainings.yml
+++ b/test/fixtures/planned_trainings.yml
@@ -1,3 +1,14 @@
+# == Schema Information
+#
+# Table name: planned_trainings
+#
+#  id         :integer          not null, primary key
+#  name       :string(255)
+#  date       :datetime
+#  created_at :datetime
+#  updated_at :datetime
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
