--- a/test/fixtures/realised_trainings.yml
+++ b/test/fixtures/realised_trainings.yml
@@ -1,3 +1,16 @@
+# == Schema Information
+#
+# Table name: realised_trainings
+#
+#  id          :integer          not null, primary key
+#  name        :string(255)
+#  date        :datetime
+#  duration    :float
+#  description :text
+#  created_at  :datetime
+#  updated_at  :datetime
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
